RichwoodNew/src/objects/Project_Part__c.object
<CustomObject>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <formula>Part_Price_EA__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is Part Price * Quantity</inlineHelpText>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Price_EA__c</fullName>
        <label>Part Price (EA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part Sold on these Projects</relationshipLabel>
        <relationshipName>Project_Parts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Parts</relationshipLabel>
        <relationshipName>Project_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Part</label>
    <nameField>
        <displayFormat>P{00000}</displayFormat>
        <label>Project Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>